--- a/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -9,6 +9,7 @@
 
 <div class="row">
     <div class="col">
-        Tabla res
+        <hr>
+        <countries-table [countries]="countriesList"></countries-table>
     </div>
 </div>
