--- a/03-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,14 +2,18 @@
 <hr>
 
 <div class="row">
-    <div class="col">
-        <shared-searchBox (onSearch)="searchByRegion($event)" placeholder="Buscar por region"></shared-searchBox>
+    <div class="col text-center">
+        <button *ngFor="let region of regions" class="btn mx-2" (click)="searchByRegion(region)"
+            [ngClass]="{'btn-outline-primary':selectedRegion===region}">
+            {{ region|uppercase }}
+        </button>
     </div>
 </div>
 
 <div class="row">
     <div class="col">
         <hr>
-        <countries-table [countries]="countriesList"></countries-table>
+        <h3 *ngIf="selectedRegion" class="text-center">Paises de {{selectedRegion | uppercase}}</h3>
+        <countries-table [countries]="countriesList" [isLoading]="isLoading"></countries-table>
     </div>
 </div>
