Seccion 12-Pipes personalizados y agrego el README de explicacion como usar las librerias

--- a/04-pipesApp/src/app/products/pages/basics-page/basics-page.component.html
+++ b/04-pipesApp/src/app/products/pages/basics-page/basics-page.component.html
@@ -23,7 +23,7 @@
 
 
         <div class="col-12 md:col-6">
-            <p-card header="TitleCase" class="p-3">
+            <p-card header="Date" class="p-3">
                 <ol>
                     <li>fecha</li>
                     <li>fecha | date</li>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="col-12 md:col-6">
-            <p-card header="TitleCase" class="p-3">
+            <p-card header="Date" class="p-3">
                 <ol>
                     <li>{{customDate}}</li>
                     <li>{{customDate|date}}</li>
