--- a/heroesApp/src/app/auth/pages/login-page/login-page.component.html
+++ b/heroesApp/src/app/auth/pages/login-page/login-page.component.html
@@ -1,4 +1,3 @@
-
 <div class="flex flex-column">
 
   <span class="text-lg mb-4">Login</span>
@@ -13,7 +12,7 @@
     <input type="password" matInput placeholder="Contraseña">
   </mat-form-field>
 
-  <button mat-button mat-flat-button color="primary">
+  <button mat-button mat-flat-button color="primary" (click)="onLogin()">
     <mat-icon>save</mat-icon>
     Ingresar
   </button>
@@ -24,4 +23,3 @@
   </div>
 
 </div>
-
