--- a/06-formsApp/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/06-formsApp/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 
-<form autocomplete="off">
+<form (ngSubmit)="onSave()" [formGroup]="myForm" autocomplete="off">
 
     <!-- Radio -->
     <div class="row mb-3">
@@ -10,14 +10,14 @@
         <div class="col-sm-9">
 
             <div class="form-check">
-                <input class="form-check-input" type="radio" value="M" id="radioMasculino">
+                <input formControlName="gender" class="form-check-input" type="radio" value="M" id="radioMasculino">
                 <label class="form-check-label" for="radioMasculino">
                     Masculino
                 </label>
             </div>
 
             <div class="form-check">
-                <input class="form-check-input" type="radio" value="F" id="radioFemenino">
+                <input formControlName="gender" class="form-check-input" type="radio" value="F" id="radioFemenino">
                 <label class="form-check-label" for="radioFemenino">
                     Femenino
                 </label>
@@ -32,7 +32,8 @@
         <div class="col-sm-9">
 
             <div class="form-check form-switch mt-2">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked"
+                    formControlName="notifications">
                 <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
             </div>
 
@@ -44,12 +45,13 @@
         <label class="col-sm-3 col-form-label"></label>
         <div class="col-sm-9">
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="flexCheckDefault">
+                <input class="form-check-input" type="checkbox" id="flexCheckDefault"
+                    formControlName="termsAndConditions">
                 <label class="form-check-label" for="flexCheckDefault">
                     Términos y condiciones de uso
                 </label>
             </div>
-            <span class="form-text text-danger">
+            <span *ngIf="isValid('termsAndConditions')" class="form-text text-danger">
                 Debe de aceptar las condiciones de uso
             </span>
 
@@ -78,7 +80,7 @@
 <br>
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ person | json }}</pre>
 
 
 <!-- <h5>Términos</h5> -->
