--- a/pro/02-pokemon-ssr/src/styles.css
+++ b/pro/02-pokemon-ssr/src/styles.css
@@ -1,2 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
+
+html,
+body {
+  @apply h-screen
+    w-full
+    h-screen
+    overflow-x-hidden
+    bg-slate-900
+    text-white
+    font-sans;
+}
+
+button {
+  @apply bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700 transition-colors duration-300;
+}
