--- a/pro/02-pokemon-ssr/src/app/pokemones/components/pokemon-card/pokemon-card.component.html
+++ b/pro/02-pokemon-ssr/src/app/pokemones/components/pokemon-card/pokemon-card.component.html
@@ -1,6 +1,6 @@
 <div
   class="m-4 bg-blue-500 h-44 bg-opacity-75 rounded-lg shadow-lg flex flex-col items-center justify-center cursor-pointer hover:bg-blue-600 transition duration-300 ease-in-out"
-  [routerLink]="['/pokemon', pokemon().id]"
+  [routerLink]="['/pokemon', pokemon().name]"
 >
   <img
     [src]="pokeImg()"
