--- a/pro/02-pokemon-ssr/src/app/pokemones/components/pokemon-list/pokemon-list.component.html
+++ b/pro/02-pokemon-ssr/src/app/pokemones/components/pokemon-list/pokemon-list.component.html
@@ -1,5 +1,9 @@
 <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-5">
   @for(pokemon of pokemons(); track pokemon.id) {
   <app-pokemon-card [pokemon]="pokemon" />
+  } @empty {
+  <div class="col-span-full text-center">
+    <p class="text-gray-500">No Pokémon found.</p>
+  </div>
   }
 </div>
