--- a/pro/06-i18n/src/app/pages/products/products.component.html
+++ b/pro/06-i18n/src/app/pages/products/products.component.html
@@ -1,20 +1,26 @@
 <section>
   <app-lenguaje-selector />
 </section>
+
 <section class="p-4">
   <div
-    class="relative bg-clip-border bg-white text-gray-700 flex h-full min-h-[314px] w-full flex-col items-center justify-center rounded-xl !bg-gray-900 px-8"
+    class="relative bg-clip-border text-gray-700 flex h-full min-h-[314px] w-full flex-col items-center justify-center rounded-xl !bg-gray-900 px-8"
   >
     <div class="container mx-auto text-center">
       <h2
         class="block antialiased tracking-normal font-sans text-4xl font-semibold leading-[1.3] text-white mb-4"
       >
-        Pricing
+        {{ 'pricingPage.title' | translate }}
       </h2>
       <p
         class="block antialiased font-sans text-xl font-normal leading-relaxed text-white mb-8 opacity-70"
+        translate="pricingPage.description"
+      ></p>
+
+      <p
+        class="block antialiased font-sans text-xl font-normal leading-relaxed text-white mb-8 opacity-70"
       >
-        Choose the perfect plan for your dining experience
+        {{ 'welcomeMessage' | translate : { firstName: 'fullName' } }}
       </p>
     </div>
   </div>
@@ -27,14 +33,14 @@
           <h5
             class="antialiased tracking-normal font-sans text-xl font-semibold leading-snug text-green-500 flex justify-center mt-2 mb-2"
           >
-            Basic Plan
+            {{ 'plans.basic.name' | translate }}
           </h5>
           <h3
             class="antialiased tracking-normal font-sans text-3xl font-semibold leading-snug text-blue-gray-900 flex justify-center mt-5 mb-2"
           >
             $9.99<span
               class="block antialiased tracking-normal font-sans text-xl font-semibold leading-snug text-blue-gray-900 self-end -translate-y-1"
-              >/per month</span
+              >/{{ 'plans.texts.perMonth' | translate }}</span
             >
           </h3>
           <ul
@@ -60,7 +66,7 @@
                 <p
                   class="block antialiased font-sans text-base leading-relaxed font-normal text-inherit"
                 >
-                  Online ordering
+                  {{ 'plans.texts.online-ordering' | translate }}
                 </p>
               </li>
               <li class="flex items-center gap-2 py-1 text-gray-700">
@@ -82,7 +88,7 @@
                 <p
                   class="block antialiased font-sans text-base leading-relaxed font-normal text-inherit"
                 >
-                  Limited support
+                  {{ 'plans.texts.limited-support' | translate }}
                 </p>
               </li>
             </div>
@@ -90,8 +96,9 @@
           <button
             class="align-middle select-none font-sans font-bold text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 px-6 rounded-lg bg-gray-900 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none w-full flex items-center justify-center gap-4"
             type="button"
+            routerLink="/basic-plan"
           >
-            join
+            {{ 'plans.texts.join' | translate }}
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -202,7 +209,6 @@
           <button
             class="align-middle select-none font-sans font-bold text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 px-6 rounded-lg bg-gray-900 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none w-full flex items-center justify-center gap-4"
             type="button"
-            routerLink="/basic-plan"
           >
             join
             <svg
